# unrush

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  preferences.py  pyproject.toml  tags  tracks.json  tracks_editor.py  tracks_info.py
.github/workflows/: pytest.yml
src/unrush/: cli.py  languages.py  main.py  preferences.py  tracks_editor.py  tracks_info.py  unrush.py  utils.py
tests/: test_cli.py  test_languages.py  test_unrush.py
